// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Student Payments Management renders and matches snapshot 1`] = `
.c2 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  min-height: 55px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 25px 0 10px;
  border-bottom: 1px solid #d5d5d5;
  background-color: white;
}

.c0 > div {
  margin-bottom: 12px;
}

.c0 .sticky-table {
  margin-left: 15px;
  margin-right: 15px;
}

.c1 {
  width: 100%;
  color: #027EB5;
  padding-left: 10px;
}

.c3 {
  font-size: 3.5rem;
  padding-left: 12px;
}

.c4 {
  padding: 4rem 10rem 50rem;
  background-color: white;
  max-width: 1000px;
  margin: 0 auto;
}

.c4 table {
  font-size: 1.4rem;
}

.c4 table thead th,
.c4 table tbody td {
  padding: 1rem;
}

.c4 table tbody td {
  vertical-align: middle;
}

.c4 table tbody .refunded .total {
  color: #489200;
}

.c4 .footer {
  margin: 10px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 .footer > * {
  margin-top: 10px;
}

@media (max-width:600px) {
  .c0 {
    padding-bottom: 0;
  }
}

@media (max-width:600px) {
  .c0 .sticky-table {
    margin-left: 0;
    margin-right: 0;
    margin-bottom: 0;
  }
}

@media (max-width:999px) {
  .c4 {
    padding: 0;
  }

  .c4 .footer {
    padding: 1rem 24px;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 0;
  }

  .c4 .footer {
    padding: 1rem 8px;
  }
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="c0 task-homework breadcrumbs-wrapper"
        role="dialog"
        tabIndex="-1"
      >
        <div
          className="c1"
        >
          <a
            href="/foo"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-angle-left fa-w-8 fa-lg c2 ox-icon ox-icon-angle-left -move-exercise-up circle"
              data-icon="angle-left"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 256 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            My Courses
          </a>
        </div>
        <h1
          className="c3"
        >
          Manage Payments
        </h1>
      </div>
      <div
        className="c4 manage-payments"
      >
        <table
          className="table table-striped"
        >
          <thead>
            <tr>
              <th>
                Item
              </th>
              <th>
                Transaction date
              </th>
              <th>
                Order number
              </th>
              <th>
                Amount
              </th>
              <th>
                Invoice
              </th>
              <th />
            </tr>
          </thead>
          <tbody>
            <tr
              className="refunded"
            >
              <td>
                unit test product refund
              </td>
              <td>
                Jul 19th 2017
              </td>
              <td>
                cufu6hr4xicy:refund
              </td>
              <td
                className="total"
              >
                -1591.48
              </td>
              <td />
              <td
                className="refund"
              />
            </tr>
            <tr
              className=""
            >
              <td>
                unit test product
              </td>
              <td>
                Jul 16th 2017
              </td>
              <td>
                cufu6hr4xicy
              </td>
              <td
                className="total"
              >
                1591.48
              </td>
              <td>
                <a
                  className="invoice-link"
                  data-identifier="cufu6hr4xicy"
                  href="url-for-test/invoice/cufu6hr4xicy"
                  onClick={[Function]}
                >
                  Invoice
                </a>
              </td>
              <td
                className="refund"
              />
            </tr>
            <tr
              className="refunded"
            >
              <td>
                unit test product refund
              </td>
              <td>
                Jul 18th 2017
              </td>
              <td>
                kjxdvs9wd7rw:refund
              </td>
              <td
                className="total"
              >
                -1388.07
              </td>
              <td />
              <td
                className="refund"
              />
            </tr>
            <tr
              className=""
            >
              <td>
                unit test product
              </td>
              <td>
                Jul 16th 2017
              </td>
              <td>
                kjxdvs9wd7rw
              </td>
              <td
                className="total"
              >
                1388.07
              </td>
              <td>
                <a
                  className="invoice-link"
                  data-identifier="kjxdvs9wd7rw"
                  href="url-for-test/invoice/kjxdvs9wd7rw"
                  onClick={[Function]}
                >
                  Invoice
                </a>
              </td>
              <td
                className="refund"
              />
            </tr>
            <tr
              className=""
            >
              <td>
                unit test product
              </td>
              <td>
                Jul 16th 2017
              </td>
              <td>
                3dmy8nu4v4bg
              </td>
              <td
                className="total"
              >
                357.25
              </td>
              <td>
                <a
                  className="invoice-link"
                  data-identifier="3dmy8nu4v4bg"
                  href="url-for-test/invoice/3dmy8nu4v4bg"
                  onClick={[Function]}
                >
                  Invoice
                </a>
              </td>
              <td
                className="refund"
              >
                <button
                  className="async-button btn btn-primary"
                  data-identifier="3dmy8nu4v4bg"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Request Refund
                </button>
              </td>
            </tr>
            <tr
              className=""
            >
              <td>
                OpenStax Tutor
              </td>
              <td>
                Jul 14th 2017
              </td>
              <td>
                fxa4s2kj75fr
              </td>
              <td
                className="total"
              >
                13.41
              </td>
              <td>
                <a
                  className="invoice-link"
                  data-identifier="fxa4s2kj75fr"
                  href="url-for-test/invoice/fxa4s2kj75fr"
                  onClick={[Function]}
                >
                  Invoice
                </a>
              </td>
              <td
                className="refund"
              >
                <button
                  className="async-button btn btn-primary"
                  data-identifier="fxa4s2kj75fr"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Request Refund
                </button>
              </td>
            </tr>
            <tr
              className=""
            >
              <td>
                OpenStax Tutor
              </td>
              <td>
                Jul 13th 2017
              </td>
              <td>
                ru6ifviicwki
              </td>
              <td
                className="total"
              >
                13.41
              </td>
              <td>
                <a
                  className="invoice-link"
                  data-identifier="ru6ifviicwki"
                  href="url-for-test/invoice/ru6ifviicwki"
                  onClick={[Function]}
                >
                  Invoice
                </a>
              </td>
              <td
                className="refund"
              >
                <button
                  className="async-button btn btn-primary"
                  data-identifier="ru6ifviicwki"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Request Refund
                </button>
              </td>
            </tr>
            <tr
              className=""
            >
              <td>
                OpenStax Tutor
              </td>
              <td>
                Jul 13th 2017
              </td>
              <td>
                nuvwqun23ztq
              </td>
              <td
                className="total"
              >
                13.41
              </td>
              <td>
                <a
                  className="invoice-link"
                  data-identifier="nuvwqun23ztq"
                  href="url-for-test/invoice/nuvwqun23ztq"
                  onClick={[Function]}
                >
                  Invoice
                </a>
              </td>
              <td
                className="refund"
              >
                <button
                  className="async-button btn btn-primary"
                  data-identifier="nuvwqun23ztq"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Request Refund
                </button>
              </td>
            </tr>
            <tr
              className=""
            >
              <td>
                OpenStax Tutor
              </td>
              <td>
                Jul 13th 2017
              </td>
              <td>
                33uqbxbi324n
              </td>
              <td
                className="total"
              >
                13.41
              </td>
              <td>
                <a
                  className="invoice-link"
                  data-identifier="33uqbxbi324n"
                  href="url-for-test/invoice/33uqbxbi324n"
                  onClick={[Function]}
                >
                  Invoice
                </a>
              </td>
              <td
                className="refund"
              >
                <button
                  className="async-button btn btn-primary"
                  data-identifier="33uqbxbi324n"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Request Refund
                </button>
              </td>
            </tr>
          </tbody>
        </table>
        <div
          className="footer"
        >
          <a
            className="refund-policy external-icon"
            href="https://openstax.secure.force.com/help/articles/FAQ/OpenStax-Tutor-Beta-Student-Refund-Policy"
            tabIndex={0}
            target="_blank"
          >
            Refund policy for OpenStax Tutor Beta courses
          </a>
          <div
            className="help"
          >
            Need help? 
            <a
              href="mailto:support@openstax.org"
            >
              Contact Support
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;

exports[`Student Payments Management renders empty when no payments 1`] = `
.c2 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  min-height: 55px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 25px 0 10px;
  border-bottom: 1px solid #d5d5d5;
  background-color: white;
}

.c0 > div {
  margin-bottom: 12px;
}

.c0 .sticky-table {
  margin-left: 15px;
  margin-right: 15px;
}

.c1 {
  width: 100%;
  color: #027EB5;
  padding-left: 10px;
}

.c3 {
  font-size: 3.5rem;
  padding-left: 12px;
}

.c4 {
  padding: 4rem 10rem 50rem;
  background-color: white;
  max-width: 1000px;
  margin: 0 auto;
}

.c4 table {
  font-size: 1.4rem;
}

.c4 table thead th,
.c4 table tbody td {
  padding: 1rem;
}

.c4 table tbody td {
  vertical-align: middle;
}

.c4 table tbody .refunded .total {
  color: #489200;
}

.c4 .footer {
  margin: 10px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 .footer > * {
  margin-top: 10px;
}

@media (max-width:600px) {
  .c0 {
    padding-bottom: 0;
  }
}

@media (max-width:600px) {
  .c0 .sticky-table {
    margin-left: 0;
    margin-right: 0;
    margin-bottom: 0;
  }
}

@media (max-width:999px) {
  .c4 {
    padding: 0;
  }

  .c4 .footer {
    padding: 1rem 24px;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 0;
  }

  .c4 .footer {
    padding: 1rem 8px;
  }
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="c0 task-homework breadcrumbs-wrapper"
        role="dialog"
        tabIndex="-1"
      >
        <div
          className="c1"
        >
          <a
            href="/foo"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-angle-left fa-w-8 fa-lg c2 ox-icon ox-icon-angle-left -move-exercise-up circle"
              data-icon="angle-left"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 256 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
            My Courses
          </a>
        </div>
        <h1
          className="c3"
        >
          Manage Payments
        </h1>
      </div>
      <div
        className="c4 manage-payments"
      >
        <div
          className="empty"
        >
          <h3>
            No payments were found for your account.
          </h3>
        </div>
        <div
          className="footer"
        >
          <a
            className="refund-policy external-icon"
            href="https://openstax.secure.force.com/help/articles/FAQ/OpenStax-Tutor-Beta-Student-Refund-Policy"
            tabIndex={0}
            target="_blank"
          >
            Refund policy for OpenStax Tutor Beta courses
          </a>
          <div
            className="help"
          >
            Need help? 
            <a
              href="mailto:support@openstax.org"
            >
              Contact Support
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;
